[gd_scene load_steps=6 format=3 uid="uid://by012p5yesg0i"]

[ext_resource type="Script" path="res://Scripts/character_body_3d.gd" id="1_hmm83"]
[ext_resource type="PackedScene" uid="uid://b5slbn3q5dybg" path="res://Assets/TSCN/health_bar.tscn" id="2_783q5"]

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_3wfbc"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_uq6yi"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_unqj5"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[node name="Player" type="CharacterBody3D" groups=["character", "player"]]
script = ExtResource("1_hmm83")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.58528, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="interaction" type="RayCast3D" parent="Head/Camera3D"]
target_position = Vector3(0, 0, -5)

[node name="hand" type="Marker3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3)

[node name="Generic6DOFJoint3D" type="Generic6DOFJoint3D" parent="Head/Camera3D"]
node_a = NodePath("../StaticBody3D")
linear_limit_x/enabled = false
linear_limit_y/enabled = false
linear_limit_z/enabled = false

[node name="StaticBody3D" type="StaticBody3D" parent="Head/Camera3D"]

[node name="ObjectDetector" type="Area3D" parent="Head/Camera3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head/Camera3D/ObjectDetector"]
transform = Transform3D(-5, 0, 0, 0, -5, 0, 0, 0, -5, 0, 0, 0)
shape = SubResource("SeparationRayShape3D_3wfbc")

[node name="HealthBar" parent="Head/Camera3D" instance=ExtResource("2_783q5")]
offset_left = 21.0
offset_top = 601.0
offset_right = 261.0
offset_bottom = 628.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="." groups=["character", "player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_uq6yi")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." groups=["character", "player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("ConvexPolygonShape3D_unqj5")

[node name="Item_pickup_cooldown" type="Timer" parent="."]
wait_time = 0.08
one_shot = true

[connection signal="body_entered" from="Head/Camera3D/ObjectDetector" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Head/Camera3D/ObjectDetector" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="Item_pickup_cooldown" to="." method="_on_item_pickup_cooldown_timeout"]
